--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
     <div id="box"></div>
     <script>
         let IP = "", IS_DEBUG = false, day;
-        const { fetchLunchByUser, fetchBfByUser, getIDByName } = require(__dirname + "/data/lunch.js");
+        const { fetchLunchByUser, fetchBfByUser, getIDByName, getNameByID } = require(__dirname + "/data/lunch.js");
         const { data, dataBf } = require(__dirname + "/data.js");
         var div = document.getElementById("box");
         var offline = false;
@@ -48,7 +48,30 @@
                 }, 50);
             });
         }
+        function startFetchLocally(id, status) {
+            const name = getNameByID(id);
+            let prefix = status ? "已取餐！" : "";
+            var res = "";
+            if(name === "") {
+                res = "No Record";
+            } else {
+                var today = new Date().getDate();
+                if(new Date().getHours() <= 9) {
+                    res = fetchBfByUser(name, today);
+                    if(res === undefined || res === "No Food") {
+                        res = dataBf(name, today);
+                    }
+                } else {
+                    res = fetchLunchByUser(name, today);
+                    if(res === undefined || res === "No Food") {
+                        res = data(name, today);
+                    }
+                }
+            }
+            div.innerText = prefix + res;
+        }
         function fetchLunch(name, status) {
+            alert("fetchLunch");
             div.innerText = "";
             var prefix = status ? "已取餐！" : "";
             var today = new Date().getDate();
@@ -66,11 +89,13 @@
                 setTimeout(() => div.innerText = prefix + res, 50);
             });
         }
+
         function fetchBf(name, status) {
+            alert("bf");
             div.innerText = "";
             var prefix = status ? "已取餐！" : "";
             var today = new Date().getDate();
-            var res = fetchLunchByUser(name, today);
+            var res = fetchBfByUser(name, today);
             if(res === undefined || res === "No Food") {
                 res = dataBf(name, today);
             }
@@ -109,13 +134,10 @@
         }
         
         const { exec } = require("child_process");
-        const no_record_timeout = 800, handler = null;
+        const no_record_timeout = 800;
+        let handler = null;
         function voice(sentence) {
             if(sentence.toLowerCase().trim() === "no record") {
-                if(handler !== null) clearTimeout(handler);
-                handler = setTimeout(() => {
-                    voice(sentence);
-                }, no_record_timeout);
             } else if(handler !== null) {
                 clearTimeout(handler);
                 handler = null;
