--- a/test.html
+++ b/test.html
@@ -71,7 +71,7 @@
             div.innerText = prefix + res;
         }
         function fetchLunch(name, status) {
-            alert("fetchLunch");
+            // alert("fetchLunch");
             div.innerText = "";
             var prefix = status ? "已取餐！" : "";
             var today = new Date().getDate();
@@ -91,7 +91,7 @@
         }
 
         function fetchBf(name, status) {
-            alert("bf");
+            // alert("bf");
             div.innerText = "";
             var prefix = status ? "已取餐！" : "";
             var today = new Date().getDate();
